--- a/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
+++ b/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
@@ -16,7 +16,7 @@ checkpoint:
   no_epoch_checkpoints: true
 
 task:
-  _name: audio_pretraining
+  _name: spectrogram_pretraining
   data: /private/home/abaevski/data/librispeech/full
   max_sample_size: 320000
   min_sample_size: 32000
@@ -83,10 +83,10 @@ model:
   layerdrop: 0.05
   norm_eps: 1e-5
 
-  supported_modality: AUDIO
+  supported_modality: SPECTROGRAM
 
   modalities:
-    audio:
+    spectrogram:
       feature_encoder_spec: '[(512, 10, 5)] + [(512, 3, 2)] * 4 + [(512,2,2)] + [(512,2,2)]'
       conv_pos_depth: 5
       conv_pos_width: 95
