--- a/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
+++ b/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
@@ -21,6 +21,7 @@ task:
   max_sample_size: 250000 # same as MAE-AST
   min_sample_size: 32000
   normalize: true
+  enable_padding: true
   precompute_mask_config: {}
 
 dataset:
