--- a/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
+++ b/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
@@ -91,27 +91,19 @@ model:
 
   modalities:
     spectrogram:
-      feature_encoder_spec: '[(512, 10, 5)] + [(512, 3, 2)] * 4 + [(512,2,2)] + [(512,2,2)]'
-      conv_pos_depth: 5
-      conv_pos_width: 95
-      conv_pos_groups: 16
-      prenet_depth: 0
-      mask_prob: 0.5
-      mask_prob_adjust: 0.05
-      inverse_mask: false
-      mask_length: 5
+      inverse_mask: true
+      mask_prob: 0.8
+      mask_prob_adjust: 0.07
+      mask_length: 3
       mask_noise_std: 0.01
-      mask_dropout: 0
-      add_masks: false
-      ema_local_encoder: false
-      use_alibi_encoder: true
-      prenet_layerdrop: 0.05
-      prenet_dropout: 0.1
-      learned_alibi_scale: true
-      learned_alibi_scale_per_head: true
+      prenet_depth: 2
+      ema_local_encoder: true
+      num_extra_tokens: 1
+      init_extra_token_zero: false
+      use_alibi_encoder: false
       decoder:
-        input_dropout: 0.1
-        decoder_dim: 384
+        decoder_dim: 768
         decoder_groups: 16
-        decoder_kernel: 7
-        decoder_layers: 4
+        decoder_kernel: 3
+        decoder_layers: 6
+        input_dropout: 0
