--- a/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
+++ b/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
@@ -92,9 +92,12 @@ model:
   modalities:
     spectrogram:
       inverse_mask: true
-      mask_prob: 0.8
+      # Accourding to MAE-AST
+      # Set the random mask probability to 0.74 for an average of 50% masking. 
+      mask_prob: 0.74
+      # Accourding to MAE-AST
+      mask_length: 10
       mask_prob_adjust: 0.07
-      mask_length: 3
       mask_noise_std: 0.01
       prenet_depth: 2
       ema_local_encoder: true
