--- a/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
+++ b/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
@@ -33,7 +33,7 @@ task:
 
 dataset:
   num_workers: 6
-  max_tokens: 1000000
+  max_tokens: 10000
   skip_invalid_size_inputs_valid_test: true
   validate_interval: 5
   required_batch_size_multiple: 1
