--- a/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
+++ b/examples/data2vec/config/v2/base_spectrogram_only_task.yaml
@@ -33,6 +33,7 @@ task:
 
 dataset:
   num_workers: 6
+  # max_tokens: 1000000
   max_tokens: 6250
   skip_invalid_size_inputs_valid_test: true
   validate_interval: 5
