--- a/examples/data2vec/config/v2/base_audio_only_task_mae_ast.yaml
+++ b/examples/data2vec/config/v2/base_audio_only_task_mae_ast.yaml
@@ -46,9 +46,9 @@ criterion:
     - masked_pct
 
 optimization:
-  max_update: 400000
-  lr: [0.00075]
-  debug_param_names: true
+  max_update: 550000  # following MAE-AST
+  lr: [0.0001]  # following MAE-AST
+  clip_norm: 10.0  # following MAE-AST
 
 optimizer:
   _name: adam
@@ -57,8 +57,8 @@ optimizer:
   weight_decay: 0.01
 
 lr_scheduler:
-  _name: cosine
-  warmup_updates: 8000
+  _name: polynomial_decay  # following MAE-AST
+  warmup_updates: 32000  # following MAE-AST
 
 model:
   _name: data2vec_multi
@@ -87,15 +87,18 @@ model:
 
   modalities:
     audio:
-      feature_encoder_spec: '[(512, 10, 5)] + [(512, 3, 2)] * 4 + [(512,2,2)] + [(512,2,2)]'
+      feature_encoder_spec: '[(128, 10, 5)] + [(128, 3, 2)] * 4 + [(128,2,2)] + [(512,2,2)]'
       conv_pos_depth: 5
       conv_pos_width: 95
       conv_pos_groups: 16
       prenet_depth: 0
-      mask_prob: 0.5
-      mask_prob_adjust: 0.05
       inverse_mask: false
-      mask_length: 5
+      # Accourding to MAE-AST
+      # Set the random mask probability to 0.74 for an average of 50% masking. 
+      mask_prob: 0.74
+      # Accourding to MAE-AST
+      mask_length: 10
+      mask_prob_adjust: 0.07
       mask_noise_std: 0.01
       mask_dropout: 0
       add_masks: false
